--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@wcj/html-to-markdown": "^2.0.0",
     "antd": "^5.3.2",
     "bootstrap": "^5.3.2",
+    "copy-to-clipboard": "^3.3.3",
     "eventsource-parser": "^0.1.0",
     "file-saver": "^2.0.5",
     "franc": "^6.1.0",
