--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
   },
   "dependencies": {
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@wcj/html-to-markdown": "^2.0.0",
     "antd": "^5.3.2",
     "bootstrap": "^5.3.2",
